--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,12 @@
 @charset "utf-8";
 /* CSS Document */
 
+
+/*box*/
+* {
+    box-sizing: border-box;
+}
+
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
@@ -55,9 +61,14 @@ nav {
   background-color: #252831;
   text-align:center;
 }
+
 nav h1 {
   margin: auto;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
+
 nav h1 a {
   color: #fff;
   font-size: 14pt;
@@ -106,7 +117,7 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
+  height: 80px;
   background-color: #3397DB;
   align-items: center;
 }
@@ -115,7 +126,9 @@ nav h1 a {
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+  margin: 10px 20px;
+  margin-bottom: 0px;
+  padding-top: 10px;
 }
 .filter-options select {
   background-color: white;
@@ -133,19 +146,20 @@ nav h1 a {
 #restaurants-list {
   background-color: #f3f3f3;
   list-style: outside none none;
-  margin: 0;
+  margin: auto;
   padding: 30px 15px 60px;
+	width: 100%;
   text-align: center;
 }
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
-  margin: 15px;
+  /*margin: 15px;*/
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
-  width: 270px;
+  width: 100%;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -188,6 +202,10 @@ nav h1 a {
   top: 0;
   width: 100%;
   z-index: 1000;
+}
+
+#map{
+	width: 100%
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
@@ -272,4 +290,13 @@ nav h1 a {
 }
 #restaurant-hours td {
   color: #666;
+}
+
+/*Media queries*/
+@media screen and (min-width: 600px) {
+    #map {
+			width: 50%;
+
+			float: right;
+		}
 }
