--- a/css/styles.css
+++ b/css/styles.css
@@ -284,13 +284,14 @@ nav h1 a {
 #restaurants-list .fav-false:hover {
   color : #d2781f;
   text-shadow:  1px 1px 5px grey;
+  cursor: pointer;
 
 }
 
 #restaurants-list .fav-true:hover {
   color : grey;
   text-shadow:  1px 1px 5px orange;
-
+  cursor: pointer;
 }
 
 
@@ -524,4 +525,90 @@ nav h1 a {
 
 
 
+}
+
+/***Submit Review form **/
+/** Following w3school modal tutorial**/
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+
+/* Modal Content */
+.modal #modal-content {
+
+    /*center*/
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    /*width and height*/
+    width: 600px;
+    max-width: 100%;
+    height: 450px;
+    max-height: 100%;
+
+    background-color: #fefefe;
+    margin-top: 80px;
+    padding: 20px;
+    box-shadow: -1px -1px 18px 5px orange;
+    text-align: left;
+    font-size : 1.3em;
+
+    overflow: auto;
+
+}
+
+.modal button {
+  background-color:#d2781f;
+  border : none;
+  color: #fff;
+  display: inline-block;
+  font-size: 15px;
+  margin: 15px 0 0;
+  padding: 8px 30px 10px;
+  text-align: center;
+  text-decoration: none;
+}
+
+.modal button:hover {
+  box-shadow: -1px -1px 18px 5px grey;
+  cursor: pointer;
+
+}
+
+.modal input[type=text], textarea {
+
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+}
+
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 40px;
+    font-weight: bold;
+}
+
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
 }
